[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <style type="text/css" media="all">
+            p
+            {
+                text-align:center;
+                color:blue;
+                border:5px dashed yellow;
+            }
+        </style>
     </head>
     <body>
         <div class="center">
@@ -10,9 +18,9 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
-            <pre>
+            <p>
                 this is my frist webapp.
-            </pre>
+            </p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
