[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,8 @@
                 this is my frist webapp.
             </p>
         </div>
+        <button id="counter" > button </button> has been clicked <span id="count">0</span> times.
+
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
