--- a/ui/article1.html
+++ b/ui/article1.html
@@ -1,7 +1,12 @@
 <html>
 <head>
+    <script language="text/javascript" src="/ui/main.js"></script>
+
+
 </head>
 <body bgcolor="blue">
 hello
+<button id="counter" > button </button> has been clicked <span id="count">0</span> times.
+
 </body>
 </html>
