--- a/ui/index.html
+++ b/ui/index.html
@@ -24,6 +24,16 @@
         </div>
         <button id="counter" > button </button> has been clicked <span id="count">0</span> times.
 
+        <input type="text" id="name" placeholder="name"></input>
+        <input type="submit" value="submit">
+        <ul>
+            <li>name1</li>
+            <li>name2</li>
+            <li>name3</li>
+        </ul>
+
+
+
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
