--- a/ui/index.html
+++ b/ui/index.html
@@ -25,11 +25,8 @@
         <button id="counter" > button </button> has been clicked <span id="count">0</span> times.
         <br>
         <input type="text" id="name" placeholder="name"></input>
-        <input type="submit" value="submit">
-        <ul>
-            <li>name1</li>
-            <li>name2</li>
-            <li>name3</li>
+        <input type="submit" value="submit" id="submit">
+        <ul id="list">
         </ul>
 
 
