--- a/ui/index.html
+++ b/ui/index.html
@@ -24,8 +24,8 @@
         </div>
         <button id="counter" > button </button> has been clicked <span id="count">0</span> times.
         <br>
-        <input type="text" id="name" placeholder="name"></input>
-        <input type="submit" value="submit" id="submit">
+        <input type="text" id="name" ></input>
+        <input type="submit" value="submit" id="submitit">
         <ul id="list">
         </ul>
 
