--- a/ui/index.html
+++ b/ui/index.html
@@ -28,7 +28,7 @@
         <input type="submit" value="submit" id="submitit">
         <ul id="list">
         </ul>
-
+<a href="http://www.google.com"> google</a>
 
 
         <script type="text/javascript" src="/ui/main.js">
