[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,7 @@
         <ul id="list">
         </ul>
 <a href="/ui/article1.html"> google</a>
-
+<a href="/ui/article4.html">new</a>
 
         <script type="text/javascript" src="/ui/main.js">
         </script>
