[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,6 +31,7 @@
 <a href="/ui/article1.html"> google</a>
 <a href="/ui/article4.html">new</a>
 
+<a href="/ui/index1.html">index 1</a>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
