[imad-console] Updates ui/index1.html

--- a/ui/index1.html
+++ b/ui/index1.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <link href="/ui/style.css" rel="stylesheet" />
+    <link href="/ui/new.css" rel="stylesheet" />
     
     
 
@@ -23,7 +23,7 @@
 </div>
 
 
- <script type="text/javascript" src="/ui/main.js">
+ <script type="text/javascript" src="/ui/new.js">
         </script>
 </body>
 </html>
