[imad-console] Updates ui/index1.html

--- a/ui/index1.html
+++ b/ui/index1.html
@@ -9,7 +9,7 @@
         </script>
 
 </head>
-<body background="http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/ignasi_pattern_s.png">
+<body background="http://www.easyfreepatterns.com/patterns/4/background-pattern-light-grey-diagonal-line-on-white-sf-textures-4512.jpg">
 
 <div id="background">
 
