--- a/ui/index1.html
+++ b/ui/index1.html
@@ -29,7 +29,18 @@
 <div id="third">
 </div>
 
+<br>
+<br>
 
+<div id="form">
+    
+    <form name="form" method="post">
+        
+        NAME: <input type="text" name="name">
+        Email:<input type="text" name="email">
+        <input type="submit" name="submit" value="SUBMIT">
+    </form>
+</div>
 
 </body>
 </html>
