--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
         </div>
         <button id="counter" > button </button> has been clicked <span id="count">0</span> times.
         <br>
-        <input type="text" id="name" ></input>
+        <input type="text" id="name" >
         <input type="submit" value="submit" id="submitit">
         <ul id="list">
         </ul>
